[metadata]
name = syllable
version = 0.1.0
description = Count syllables
url = https://github.com/meooow25/syllable
author = meooow25
author_email = soumiksarkar.3120@gmail.com
python_requires = >=3.8

[options]
packages = syllable
install_requires =
  keras
  tensorflow
include_package_data = True
